# broadcastify-cli

./: .env-example  .gitignore  Makefile  README.md  get_archive.py  pyproject.toml  requirements.txt
broadcastify_cli/: broadcastify_cli.py
tests/: test_transcription_api.py
