[build-system]
requires = ["setuptools>=46.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "broadcastify-cli"
version = "0.1.1" 
description = " CLI for interacting with the unoffical broadcastify API"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "NotJoeMartinez", email = "notjoemartinez@protonmail.com" }
]
keywords = ["radio", "cli", "broadcastify"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


dependencies = [
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "idna==3.7",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "Pygments==2.17.2",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "rich==13.7.1",
    "urllib3==2.2.1",
    "pydub==0.25.1", 
    "openai-whisper==20231117",
    "openai==1.22.0"
]

[project.scripts]
broadcastify-cli = "broadcastify_cli.broadcastify_cli:cli"

[project.urls]
Homepage = "https://github.com/NotJoeMartinez/broadcastify-cli"